--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -1,15 +1,13 @@
 * {
   margin: 0;
   padding: 0;
+  /* background-color: #F4EEE0; */
+  font-size: 30px;
 }
 
 a {
   color: inherit;
   text-decoration: none;
-}
-
-* {
-  background-color: #F4EEE0;
 }
 
 input {
