--- a/src/client/src/components/UI/Loader/Loader.module.css
+++ b/src/client/src/components/UI/Loader/Loader.module.css
@@ -1,8 +1,8 @@
 .loader {
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
-    border: 5px dashed gray;
+    border: 15px dashed #222831;
     animation: rotate 1.3s infinite linear;
 }
 
