--- a/src/client/src/components/ProductCreation/ProductCreationForm.module.css
+++ b/src/client/src/components/ProductCreation/ProductCreationForm.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     width: 600px;
-    height: 600px;
+    min-height: 600px;
 }
 
 .inputs {
