сделал страницу продукта с отзывами

--- a/src/client/src/components/Product/ProductCreationForm.module.css
+++ b/src/client/src/components/Product/ProductCreationForm.module.css
@@ -1,4 +1,4 @@
-.form {
+#form {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -9,7 +9,6 @@
 .inputs {
     display: flex;
     flex-direction: column;
-    
 }
 
 .input {
