--- a/src/client/src/components/Product/Product.module.css
+++ b/src/client/src/components/Product/Product.module.css
@@ -48,29 +48,10 @@
     font-size: 30px;
 }
 
-.reviewsContainer {
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
+.reviews {
+    margin-top: 50px;
     width: 50%;
     margin-left: 25%;
-    margin-bottom: 50px;
-}
-
-.reviewsHeader {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    margin-bottom: 15px;
-}
-
-.reviewsTitle {
-    font-size: 23px;
-}
-
-.pagesList {
-    margin-top: 10px;
-    align-self: center;
+    margin-bottom: 100px;
 }
 
