--- a/src/client/src/components/Auth/AuthForm.module.css
+++ b/src/client/src/components/Auth/AuthForm.module.css
@@ -29,8 +29,12 @@
 }
 
 .authButtons {
-    margin-top: 30px;
-    margin-bottom: 60px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    margin-bottom: 30px;
+    margin-top: 20px;
 }
 
 .authButton {
@@ -40,11 +44,18 @@
     padding: 10px 20px;
     border-radius: 20px;
     transition: 0.1s;
-    font-family: 'Inter';
+    width: 40%;
 }
 
 .authButton:hover {
     cursor: pointer;
     opacity: 0.7;
     transition: 0.1s;
+}
+
+.link {
+    color: white;
+    text-align: center;
+    margin-top: 15px;
+    font-size: 16px;
 }
