--- a/src/client/src/components/Product/Product.module.css
+++ b/src/client/src/components/Product/Product.module.css
@@ -61,3 +61,10 @@
     margin-top: 5%;
 }
 
+.error {
+    text-align: center;
+    font-size: 21px;
+    font-weight: 600;
+    margin-top: 5%;
+}
+
