--- a/src/client/src/components/Chat/Chat.module.css
+++ b/src/client/src/components/Chat/Chat.module.css
@@ -83,11 +83,15 @@
     display: flex;
     align-items: center;
     margin-top: 20px;
+    width: 100%;
+    justify-content: center;
 }
 
 .textarea {
     border-radius: 20px 0px 0px 20px;
     font-size: 15px;
+    resize: none;
+    width: 60%;
 }
 
 .button {
@@ -95,4 +99,5 @@
     height: 100%;
     border-radius: 0px 20px 20px 0px;
     border-left: none;
+    width: 20%;
 }
